k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dhcp2p
  labels:
    name: dhcp2p
    app: dhcp2p
